--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ show: 1
 
 <p style="font-size: 16px">
 
-Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. I also had the pleasure of collaborating with Netflix researchers during Summer'25.
+Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>.
 <br>
 My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. 
-I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization.
+I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization. I also had the pleasure of collaborating with Netflix researchers during Summer'25.
 <br>
 Prior to starting PhD, I enjoyed several years working as a controls engineer at Amazon. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research.
 I hold a Bachelors of Engineering from Delhi University, India.
