--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@ show: 1
 
 Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>.
 <br>
-My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. 
-I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization. I also had the pleasure of collaborating with Netflix researchers during Summer'25.
+My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. As such I am a machine learning generalist with focus in probabilistic modeling and reinforcement learning.
+I am interested in studying and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. During 2025, I have had the pleasure of collaborating with several Netflix researchers.
 <br>
-Prior to starting PhD, I enjoyed several years working as a controls engineer at Amazon. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research.
-I hold a Bachelors of Engineering from Delhi University, India.
+Prior to starting PhD, I had a wonderful time working at Amazon, Georgia Tech, and Delhi University, India.
 <br>
 
 <br>
