--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ show: 1
   </td><td style="padding:10px">
     <center>
     <h1>Richa Rastogi</h1>
-    <span style="font-size:16px"><a href="mailto:rr568@cornell.edu">[Email]</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="mailto:rr568@cornell.edu">Email</a></span> </h1> <br>
 </center>
 
       </td>
@@ -35,9 +35,10 @@ Prior to starting PhD, I had a wonderful time working at Amazon, Stanford, Georg
 
 <br>
 
-<h4>Selected Works</h4>
+<h4>News</h4>
 I will be at NeurIPS'25 in San Diego presenting MultiScale Bandits paper. If you are interested in collaborating or wish to schedule a meeting, please feel free to <a href="mailto:rr568@cornell.edu">reach out.</a> 
 
+<br>
 <br>
 
 <h4>Selected Works <span style="font-size: 14px">(complete works at <a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>)</span></h4>
