--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ show: 1
 Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>.
 <br>
 My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. As such I am a machine learning generalist with focus in probabilistic modeling and reinforcement learning.
-I am interested in studying and developing principled methods that tackle real-world complexities such as sparse rewards, long horizons, computational inefficiency, uncertainties with an eye towards social impact of these systems. During 2025, I enjoyed the opportunity to work with several Netflix researchers.
+I am interested in studying and developing principled methods that tackle real-world complexities such as sparse rewards, long horizons, computational inefficiency, etc. with an eye towards social impact of these systems. During 2025, I enjoyed the opportunity to work with several Netflix researchers.
 <br>
 Prior to starting PhD, I had a wonderful time working at Amazon, Stanford, Georgia Tech, and Delhi University, India.
 <br>
