--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Other Stuff
+title: Before 2022
 weight: 2
 permalink: /projects/
 show: 1
@@ -36,3 +36,49 @@ show: 1
 </table>
 
 
+<!-- <table>
+  {% for paper in site.data.projects.projects %}
+  
+  
+    <tr><td style="padding:10px">
+        {% if paper.image %}
+        {% if forloop.index == 1 %}
+        <a href="{{paper.pdf}}"><img height="200px" style="min-width:150px" src="{{paper.image}}"></a>
+        {% else %}
+        <a href="{{paper.pdf}}"><img width="800px" style="min-width:150px" src="{{paper.image}}"></a>
+        {% endif %}
+        {% else %}
+        <a href="{{paper.pdf}}"><img height="80px" style="min-width:150px" src="https://avatar.tobi.sh/{{paper.title}}"></a>
+        {% endif %}
+  </td><td style="padding:10px">
+  <a class="paper" style="color: #0e56b5" href="{{paper.pdf}}">
+  {{paper.title}}
+  </a><br>
+  {{paper.authors}}.<br>
+  <span style="color: #B25959;">{{paper.conference}}</span> <br>
+  {{paper.tldr}} <br>
+  <span style="font-size: 14px">
+      {% if paper.code %}<a style="color: #0e56b5" href="{{paper.code}}">code</a>{% endif %}
+      {% if paper.code and paper.slides %} | {% endif %}
+      {% if paper.slides %}<a style="color: #0e56b5" href="{{paper.slides}}">slides</a>{% endif %}
+      {% if paper.slides and paper.bibtex %} | {% endif %}
+      {% if paper.bibtex %}
+          <a style="color: #0e56b5" 
+             onclick="downloadBibtex(this)" 
+             data-bibtex="{{paper.bibtex | escape}}"
+             href="javascript:void(0)">bibtex</a>
+      {% endif %}
+      {% if paper.bibtex and paper.poster %} | {% endif %}
+      {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
+      {% if paper.poster and paper.news %} | {% endif %}
+      {% if paper.news %}<a style="color: #B25959" href="{{paper.news}}"> Media: Cornell News</a>{% endif %}
+  </span><br>
+  {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
+  {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
+  -->
+  <!-- <br>
+  
+  </td></tr>
+  
+  {% endfor %}
+  </table> --> 
